fix gap

--- a/src/components/AboutPage/AboutPage.component.css
+++ b/src/components/AboutPage/AboutPage.component.css
@@ -211,7 +211,7 @@ mix-blend-mode: normal;
   .customers-interviews__text-container {
     display: flex;
     flex-direction: column;
-    gap: 20px;
+    gap: 24px;
   }
   .customers-interviews__wrapper {
     flex-direction: column;
